[metadata]
name = AES-Encryptor
version = 1.8
author = Patan Musthakheem
author_email = patanmusthakheem786@gmail.com
description = Encrypt Strings With AES Encryption
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pmk456/AES-Encryptor
project_urls =
    Bug Tracker = https://github.com/pmk456/AES-Encryptor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src
